<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FriendLocalizer</string>
    <string name="action_settings">Ustawienia</string>
    <string name="action_logout">Wyloguj</string>
    <string name="action_search_friends">Szukaj znajomych</string>
    <string name="hello_world">Hello world!</string>
    <string name="zaloguj">ZALOGUJ</string>
    <string name="email">Adres e-mail</string>
    <string name="haslo">Hasło</string>
    <string name="linkDoRejestracji">Nie posiadasz konta? Zarejestruj się!</string>
    <string name="zapamietajMnie">Zapamiętaj mnie</string>
    <string name="title_activity_logged_inctivity">FriendLocalizer</string>
    <string name="title_activity_main">FriendLocalizer</string>
    <string name="title_activity_register">Rejestracja</string>
    <string name="zarejestruj">ZAREJESTRUJ</string>
    <string name="linkDoLogowania">Mam już konto. Zaloguj mnie !</string>
    <string name="name">Imię</string>
    <string name="lastname">Nazwisko</string>
    <string name="title_activity_logged_main_screen">FriendLocalizer</string>
    <string name="gpsStatus">Brak sygnału GPS!</string>
    <string name="description">image</string>
    <string name="title_activity_search_friends">Wyszukaj znajomych</string>
    <string name="wyszukaj">Wyszukaj znajomych</string>
    <string name="title_activity_search_friends_list_view">Lista znalezionych</string>
    <string name="title_activity_search_friends_list">Lista znalezionych</string>
    <string name="title_activity_new_invite_to_friends">Zaproszenia</string>
    <string name="title_activity_user_friend_list">Twoi znajomi</string>
    <string name="title_activity_profile_fragment">Profil</string>
</resources>
