<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#3b3b3b" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip" >
		<!--  View Title Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:text="@string/zarejestruj"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />
        <!--  Name Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/name" />
        
        <EditText
            android:id="@+id/registerName"
            android:inputType="textPersonName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white" />
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"
            android:text="@string/lastname" />
        
        <EditText
            android:id="@+id/registerLastname"
            android:inputType="textPersonName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white" />
        
        
		<!--  Email Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:text="@string/email" />
		<!--  Email TextField -->
        <EditText
            android:id="@+id/registerEmail"
            android:inputType="textEmailAddress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white" />
        
		<!--  Password Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:textColor="@android:color/white"
            android:text="@string/haslo" />
		
		<!--  Password TextField -->
        <EditText
            android:id="@+id/registerPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@android:color/white" />
        
        <!--  Error message -->
        <TextView android:id="@+id/register_error"
            		android:layout_width="fill_parent"
            		android:layout_height="wrap_content"
            		android:textColor="#e30000"
            		android:padding="10dip"
            		android:textStyle="bold"/>

		<!--  Login Button -->        
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/zarejestruj"
            android:textColor="@android:color/white" />

        <!--  Link to Login Screen -->
        <Button
            android:id="@+id/btnLinkToLoginScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@null"
            android:text="@string/linkDoLogowania"
            android:textColor="#21dbd4"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>