<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#3b3b3b"
     >

   <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip" 
        >
		<!--  Widok tytułowy -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:text="@string/zaloguj"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@android:color/white" />
		<!--  Email -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/email" />
		<!--  Email EditText -->
        <EditText
            android:id="@+id/loginEmail"
            android:inputType="textEmailAddress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            android:background="@android:color/white"
			android:imeOptions="actionNone|actionUnspecified|flagNoFullscreen|flagNoExtractUi"
            />
        
		<!--  Hasło -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:textColor="@android:color/white"
            android:text="@string/haslo" />
		<!--  Hasło EditText -->
        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@android:color/white"
            android:imeOptions="actionNone|actionUnspecified|flagNoFullscreen|flagNoExtractUi" />
        

        
        <!--  Wiadomość o błędzie -->
        <TextView android:id="@+id/login_error"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#e30000"
            android:padding="5dip"
            android:textStyle="bold"/>

		<!--  Login Button -->
        
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/zaloguj"
            android:textColor="@android:color/white" />

        <!--  Link do rejestracji -->
        <Button
            android:id="@+id/btnLinkToRegisterScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dip"
            android:background="@null"
            android:text="@string/linkDoRejestracji"
            android:textColor="#21dbd4"
            android:textStyle="bold"
             />
    </LinearLayout>

</ScrollView>